--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -10,6 +10,8 @@
     <%= f.label :text %><br>
     <%= f.text_area :text %>
   </p>
+
+  <%= f.file_field :main_image %>
  
   <p>
     <%= f.submit %>
