--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -11,7 +11,15 @@
     <%= f.text_area :text %>
   </p>
 
-  <%= f.file_field :main_image %>
+  <div>
+    <%= f.label :cover_image %><br>
+    <%= f.file_field :cover_image %>
+  </div>
+  
+  <div>
+    <%= f.label :uploads %><br>
+    <%= f.file_field :uploads, multiple: true %>
+  </div>
  
   <p>
     <%= f.submit %>
